--- a/app/src/main/res/layout/activity_clinte.xml
+++ b/app/src/main/res/layout/activity_clinte.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:hint="address"
             android:textSize="14pt"
-
+android:id="@+id/Add_clinte"
             android:layout_marginTop="5pt"
             />
         <EditText
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:hint="city"
             android:textSize="14pt"
-
+android:id="@+id/city_clinte"
             android:layout_marginTop="5pt"
             />
         <EditText
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:hint="number"
             android:textSize="14pt"
-
+android:id="@+id/num_clinte"
             android:layout_marginTop="5pt"
             />
         <EditText
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:hint="email"
             android:textSize="14pt"
-
+android:id="@+id/emil_clinte"
             android:layout_marginTop="5pt"
             />
         <EditText
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:hint="remarks"
             android:textSize="14pt"
-
+android:id="@+id/remarks_clinte"
             android:layout_marginTop="5pt"
             />
         />
@@ -68,7 +68,7 @@
             android:text="submit"
             android:backgroundTint="#9FAAA8"
             android:textSize="14pt"
-            android:id="@+id/button1"
+            android:id="@+id/button_clinte"
             />
 
 
