--- a/app/src/main/res/layout/activity_lawyer.xml
+++ b/app/src/main/res/layout/activity_lawyer.xml
@@ -131,6 +131,16 @@
         android:text="Submit"
         android:textColor="@color/white"
         android:textSize="20dp" />
+    <Button
+        android:id="@+id/viewdata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_login"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:text="View data"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
 
 
