--- a/app/src/main/res/layout/activity_userlist.xml
+++ b/app/src/main/res/layout/activity_userlist.xml
@@ -7,8 +7,8 @@
     tools:context=".userlist">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviews"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recyclerview"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
