--- a/app/src/main/res/layout/singlerowdesign.xml
+++ b/app/src/main/res/layout/singlerowdesign.xml
@@ -9,53 +9,109 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="130dp"
         android:padding="15dp"
         android:background="@drawable/download">
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
 
+            android:id="@+id/imageView"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:foregroundGravity="center"
+            android:src="@drawable/user"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
 
 
         <TextView
             android:id="@+id/nametext"
+
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textStyle="bold"
+            android:layout_marginLeft="5dp"
+
             android:text="User Name"
-            />
+            android:layout_toRightOf="@id/imageView"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/addrs"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+
+            android:layout_toRightOf="@id/imageView"
             android:layout_below="@id/nametext"
             android:text="address"
+            android:textStyle="bold"
 
-            android:textSize="25sp" />
+            />
 
         <TextView
             android:id="@+id/numbr"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/addrs"
+            android:layout_marginLeft="5dp"
+
+            android:layout_toRightOf="@id/imageView"
             android:text="number"
-            android:textSize="25sp" />
+            android:textStyle="bold"
+             />
 
         <TextView
             android:id="@+id/catagory"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/numbr"
+            android:layout_toRightOf="@id/imageView"
             android:text="Category"
-            android:textSize="25sp" />
+            android:layout_marginLeft="5dp"
+
+            android:textStyle="bold"
+            />
 
         <TextView
             android:id="@+id/remarks"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/catagory"
+            android:layout_toRightOf="@id/imageView"
+            android:layout_marginLeft="5dp"
+
             android:text="Remarks"
-            android:textSize="25sp" />
+            android:textStyle="bold"
+             />
 
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/buttonEditstudent"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_edit_black_24dp"
+            android:text="Edit"
+            android:tint="#3700B3" />
+
+        <ImageView
+            android:id="@+id/buttonDeleteStudent"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_margin="20dp"
+            android:layout_toRightOf="@id/numbr"
+
+            android:src="@drawable/ic_delete_black_24dp"
+            android:text="Delete"
+            android:tint="#3700B3" />
+
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
